--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,70 @@
+body {
+    font-family: "Fascinate";
+    background-image: url("https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569__480.jpg");
+    background-size: cover;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+
+}
+
+#title {
+    font-size: 7em;
+    text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 6px 1px #919191,
+    1px 7px 1px #919191,
+    1px 8px 1px #919191,
+    1px 9px 1px #919191,
+    1px 10px 1px #919191,
+1px 18px 6px rgba(16,16,16,0.4),
+1px 22px 10px rgba(16,16,16,0.2),
+1px 25px 35px rgba(16,16,16,0.2),
+1px 30px 60px rgba(16,16,16,0.4);
+}
+
 .flex-container {
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 .flex-container div {
-    border: 1px solid red
+    height: 200px; 
 }
 .container {
     height: 100px;
     flex-direction: column;
 }
 
-button {
-    width: fit-content;
+
+.btn {
     margin: auto;
+    width: fit-content;
+    justify-content: center;
+    font-size: 18px;
+    padding: 12px 32px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+    border-radius: 50px;
+    box-shadow: rgba(var(--primary-color), 0.5) 0px 0px 20px 0px;
+
 }
 
 #title-div {
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+#credits {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;
+    font-family: sans-serif;
 }
 
