working on adjusting for different screen sizes

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@ body {
     background-image: url("https://www.pcclean.io/wp-content/uploads/2020/4/I7FjYn.jpg");
     background-size: cover;
     color: white;
-    padding: 1rem;
     text-align: center;
+    width: 100vw;
+    height: 100vh;
 
 }
 
 #title {
-    font-size: 4em;
+    font-size: 3em;
     text-shadow: 1px 1px 1px #919191,
     1px 2px 1px #919191,
     1px 3px 1px #919191,
@@ -29,22 +30,25 @@ body {
 .flex-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    width: 100vw;
+    height: 100vh;
 }
-.flex-container div {
-    height: 200px; 
-}
+
 .container {
-    height: 100px;
+    height: 20vh;
+    width: 100vw;
     flex-direction: column;
 }
 
 
 .btn {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 20vh;
     width: fit-content;
     justify-content: center;
-    font-size: 18px;
+    font-size: 2vw;
     padding: 12px 32px;
     cursor: pointer;
     border-radius: 4px;
@@ -58,7 +62,11 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 40px;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
 }
 
 #credits {
