fixed bug that made bootstrap disappear

--- a/styles.css
+++ b/styles.css
@@ -36,17 +36,17 @@ body {
     .btn {
     width:fit-content;
     justify-content:center;
-    font-size:2vw;
+    font-size:1vw;
     cursor:pointer;
     transition:all .3s ease;
     border-radius:50px;
-    box-shadow:rgba var(--primary-color), .5 0 0 20px 0;
+    box-shadow: var(--primary-color), .5 0 0 20px 0;
     margin-right: auto;
     margin-left: auto;
     margin-top: 10vh;
     margin-bottom: 0;
     padding:12px 32px;
-    }
+    } 
     
     #title-div {
     display:flex;
